--- a/src/main/resources/templates/trajet/user.html
+++ b/src/main/resources/templates/trajet/user.html
@@ -5,12 +5,12 @@
 <h1>Ensemble des trajets créés par un conducteur
 </h1>
 
-<div th:each="trajet : ${trajets}">
-    <div th:text="${trajet.Depart}"></div>
-    <div th:text="${trajet.Arrive}"></div>
-    <div th:text="${trajet.date}"></div>
-    <div th:text="${trajet.Place}"></div>
-    <div th:text="${trajet.prix}"></div>
+<div th:each="trajet : ${trajets2}">
+    <div th:text="${trajet2.Depart}"></div>
+    <div th:text="${trajet2.Arrive}"></div>
+    <div th:text="${trajet2.date}"></div>
+    <div th:text="${trajet2.Place}"></div>
+    <div th:text="${trajet2.prix}"></div>
     <hr/>
 </div>
 
